2005-08-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/volta-engraver.cc (process_music): use
	Text_interface::is_markup() for setting the 'text property of the
	volta bracket.

	* input/mutopia/claop.py (accents): update syntax to 2.6

	* scm/define-context-properties.scm
	(all-user-translation-properties): add countPercentRepeats.

	* Documentation/user/basic-notation.itely (Measure repeats): add
	isolated percent example.

2005-08-18  Graham Percival  <gpermus@gmail.com>

	* input/ {various}: change direction #1, #-1 to
	#up/#down or \fooUp, \fooDown.

	* Documentation/user/music-glossary.tely: #-1 to #down.

	* ly/bagpipe.ly, engraver-init.ly, property-init.ly: #1
	to #up, #-1 to #down.

2005-08-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/engraver-group.hh: rename.

	* lily/include/performer-group.hh: rename.

2005-08-18  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/test/script-abbreviations.ly: Removed some old LaTeX
	left overs.

2005-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/convertrules.py (conv): inside-slur -> avoid-slur.
	Remove functions.  Remove if 1: constructs, reindent.

	* scripts/convert-ly.py (add_version): Add functions from
	convertrules.py

	* scm/script.scm (default-script-alist):
	s/priority/script-priority.  Fixes script stacking.  Backportme.
	(Fermata): Very low priority.

2005-08-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/*.ly: remove superfluous \score blocks. Reindent.

	* input/regression/slur-script.ly: remove padding tweaks. Add
	comment strings.

	* lily/note-spacing.cc (get_spacing): remove kludge for EOL wide
	time sigs and related stuff.

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	@code{} tags to property description.

	* lily/include/line-group-group-engraver.hh (Module): remove file.

	* python/convertrules.py (conv): add rule for
	Engraver_group_engraver -> Engraver_group.

	* lily/include/performer-group-performer.hh: analogous.
