@@ -1,5 +1,10 @@
 2005-08-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/ly-module.cc (make_stand_in_procs_weak): only kludge if
+	scm_stand_in_procs is not weak_any.
+
+	* lily/volta-bracket.cc (print): don't use strcmp().
+
 	* lily/volta-engraver.cc (process_music): use
 	Text_interface::is_markup() for setting the 'text property of the
 	volta bracket.
